# mouse_forms

./: Cargo.toml
resources/: descriptions.pug  foreigner-arrival-notification.mf.pug  foreigner-data-change.mf.pug  form-instructions.pug  group-instructions.mf.pug  implicit-label.pug  length.pug  link.pug  multiple-scripts.mf.pug  options.mf.pug  placeholder.pug  rows.pug  select-group.mf.pug  tax-patent.mf.pug  trademark-application.mf.pug
src/: lib.rs  models.rs  parser.rs  token.rs
src/models/: error.rs
